# sb-ai-dashboard

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: model_config.yaml
data/synthetic/: generate.py
docker/: Dockerfile.api
docs/: architecture.md
docs/model_cards/: occupancy_transformer.md
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/routers/: anomalies.py  chat.py  predictions.py  sensors.py
src/chatbot/: agent.py  tools.py
src/models/occupancy/: transformer.py
src/pipeline/: ingest.py
src/utils/: config.py  logging.py
tests/: conftest.py
tests/unit/: test_occupancy_model.py
